image/other updates

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="assets/css/style.css">
 	<title>Document</title>
 </head>
 
@@ -68,10 +69,20 @@
 							<h3>Connect With Me</h3>
 						</div>
 
-						<div class="panel-body img-responsive" id="connect-links">
-							<a target="_blank" href="https://www.linkedin.com/in/leo-galey-b9a1245b/"><img id="linkedin" src="assets/images/linkedin_2.png" alt="LinkedIn Link"></a>
-							<a target="_blank" href="https://stackoverflow.com/users/8481334/leo-galey?" ><img id="stackoverflow" src="assets/images/stackoverflow.png" alt="Stack Overflow Link"></a>
-							<a target="_blank" href="https://github.com/leogaley"><img id="github" src="assets/images/github_2.png" alt="Github Link"></a>
+						<div class="panel-body id="connect-links">
+							<div class="row">
+								<div class="col-lg-12">
+									<a target="_blank" href="https://www.linkedin.com/in/leo-galey-b9a1245b/"><img id="linkedin" src="assets/images/linkedin_2.png" alt="LinkedIn Link"></a>
+								<!-- </div> -->
+
+								<!-- <div class="col-lg-4"> -->
+									<a target="_blank" href="https://stackoverflow.com/users/8481334/leo-galey?" ><img id="stackoverflow" src="assets/images/stackoverflow_3.png" alt="Stack Overflow Link"></a>
+								<!-- </div> -->
+
+								<!-- <div class="col-lg-4"> -->
+									<a target="_blank" href="https://github.com/leogaley"><img id="github" src="assets/images/github_2.png" alt="Github Link"></a>
+								</div>
+							</div>
 						</div>
 
 					</div>
@@ -83,8 +94,10 @@
 
 	</div>
 
-	<footer class="panel-footer">
+	<footer class="container-fluid">
+		<div class="panel-footer">
 		Copyright &copy; 2017 Leo Galey IV
+		</div>
 	</footer>
 
 </body>
