update index and portfolio

--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" href="assets/css/style.css">
-	<title>Document</title>
+	<title>About Me - Leo Galey</title>
 </head>
 
 <body>
 	<nav class="navbar-default">
   		<div class="container">
     		<div class="navbar-header">
-      			<a class="navbar-brand" href="#">Leo Galey IV</a>
+      			<a class="navbar-brand" href="#">Leo M Galey IV</a>
     		</div>
     		<ul class="nav navbar-nav navbar-right">
-		      <li><a href="#">About</a></li>
+		      <li><a href="index.html">About</a></li>
 		      
-		      <li><a href="#">Portfolio</a></li>
-		      <li><a id="contact" href="#">Contact</a></li>
+		      <li><a href="portfolio.html">Portfolio</a></li>
+		      <li><a id="contact.html" href="#">Contact</a></li>
 		    </ul>
   		</div>
 	</nav>
@@ -90,11 +90,15 @@
 
 	</div>
 
-	<footer class="container-fluid">
-		<div class="panel-footer">
-		Copyright &copy; 2017 Leo Galey IV
-		</div>
-	</footer>
+	 
+
+    <footer class="footer text-center">
+      <div class="container">
+        <div class="footer-content">
+        	Copyright &copy; Leo M Galey IV
+        </div>
+      </div>
+    </footer>
 
 </body>
 
