final push including notes

--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
 		      <li><a href="index.html">About</a></li>
 		      
 		      <li><a href="portfolio.html">Portfolio</a></li>
-		      <li><a id="contact.html" href="#">Contact</a></li>
+		      <li><a id="contact" href="contact.html">Contact</a></li>
 		    </ul>
   		</div>
 	</nav>
 	
 	<div id="main-container">
+		<!-- boostrap container -->
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-8">
